--- a/styles/styles.css
+++ b/styles/styles.css
@@ -73,6 +73,7 @@ body[data-color='yellow'] {
   background-clip: padding-box;
   box-shadow: 0 0 0 4px rgba(252, 252, 252, 0.4);
   font-family: "Inter", "Arial", sans-serif;
+  text-align: center;
   font-size: 16px;
   font-weight: 700;
   line-height: 20px;
@@ -150,12 +151,13 @@ body[data-color='yellow'] {
   cursor: pointer;
 }
 
-.gllacy-link {
-  margin: 0 16px 0 0;
+.navigation-link-busket {
+  box-sizing: border-box;
 }
 
-.header-link.is-active {
-  background-color: #ff4a78;
+.gllacy-link {
+  margin: 0;
+  margin-right: 16px;
 }
 
 .header-link.is-current {
@@ -189,8 +191,12 @@ body[data-color='yellow'] {
   width: 1170px;
   display: flex;
   align-items: center;
-  padding: 24px 0;
+  padding: 17px 0 24px;
   margin: 0 auto;
+}
+
+.navigation-wrapper-catalog {
+  padding-top: 22px;
 }
 
 .navigation-list {
@@ -207,6 +213,7 @@ body[data-color='yellow'] {
   display: flex;
   align-items: center;
   max-width: 470px;
+  padding-right: 3px;
 }
 
 .navigation-user .navigation-item {
@@ -214,6 +221,10 @@ body[data-color='yellow'] {
 }
 
 .navigation-user .navigation-item:last-child {
+  margin: 0;
+}
+
+.navigation-user .navigation-item-tel {
   margin: 0;
 }
 
@@ -233,7 +244,7 @@ body[data-color='yellow'] {
 }
 
 .promo-slider {
-  margin-bottom: 80px;
+  margin-bottom: 105px;
 }
 
 .tittle {
@@ -275,19 +286,19 @@ body[data-color='yellow'] {
 .images-container {
   display: grid;
   grid-template-columns: 306px 100px 100px;
-  column-gap: 56px;
+  column-gap: 52px;
 }
 
-.image-wrapper:last-of-type {
-  transform: translateX(-15px);
+.image-wrapper:nth-child(3n) {
+  transform: none;
 }
 
 .image-wrapper::before {
   position: absolute;
   content: "";
-  left: 0;
-  top: 40%;
-  right: 0;
+  left: -20px;
+  top: 41%;
+  right: 22px;
   height: 100px;
   border-radius: 50%;
   background: rgba(252, 252, 252, 0.5);
@@ -300,8 +311,10 @@ body[data-color='yellow'] {
 }
 
 .image-wrapper.is-active::before {
-  height: 312px;
-  top: 19%;
+  height: 310px;
+  top: 20%;
+  left: 3px;
+  right: -9px;
 }
 
 .image-wrapper {
@@ -309,11 +322,11 @@ body[data-color='yellow'] {
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content: center;
 }
 
 .image-wrapper:not(.is-active) {
   opacity: 0.4;
+  transform: translateX(26px);
 }
 
 .slider-image {
@@ -333,12 +346,12 @@ body[data-color='yellow'] {
 
 .slider-button {
   position: absolute;
-  top: 45.5%;
+  top: 48.5%;
   border: none;
   background-color: rgba(252, 252, 252, 0.3);
   box-shadow: 0 0 0 2px #fcfcfc;
-  width: 38px;
-  height: 38px;
+  width: 35px;
+  height: 35px;
   border-radius: 50%;
   display: flex;
   align-items: center;
@@ -360,7 +373,7 @@ body[data-color='yellow'] {
 }
 
 .slider-button:active {
-  background-color:  rgba(252, 252, 252, 0.5);
+  background-color: rgba(252, 252, 252, 0.5);
   box-shadow: 0 0 0 2px rgba(252, 252, 252, 0.5);
 }
 
@@ -379,11 +392,11 @@ body[data-color='yellow'] {
 }
 
 .slider-button-prev {
-  left: 45.5%;
+  left: 46.5%;
 }
 
 .slider-button-next {
-  right: 25%;
+  right: 24%;
 }
 
 .slider-button-prev svg {
@@ -392,7 +405,7 @@ body[data-color='yellow'] {
 
 .slider-pagination {
   position: absolute;
-  bottom: 0;
+  bottom: -26px;
   left: 0;
   list-style-type: none;
   margin: 0;
@@ -413,7 +426,7 @@ body[data-color='yellow'] {
 }
 
 .slider-pagination-button.is-current {
-  background-color:#fcfcfc;
+  background-color: #fcfcfc;
   pointer-events: none;
 }
 
@@ -438,8 +451,8 @@ body[data-color='yellow'] {
 
 .social-list {
   position: absolute;
-  bottom: 0;
-  right: 0;
+  bottom: -28px;
+  right: -39px;
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -532,7 +545,7 @@ body[data-color='yellow'] {
 }
 
 .gift-button {
-  display: block;
+  display: inline-block;
   font-weight: 700;
   color: #2d3440;
   text-decoration: none;
@@ -544,7 +557,7 @@ body[data-color='yellow'] {
 }
 
 .most-popular {
-  margin-bottom: 104px;
+  margin-bottom: 80px;
 }
 
 .most-popular-tittle {
@@ -725,7 +738,7 @@ body[data-color='yellow'] {
 
 .advantages-tittle {
   font-size: 32px;
-  margin-bottom: 56px;
+  margin-bottom: 53px;
 }
 
 .advantages-text {
@@ -805,7 +818,7 @@ body[data-color='yellow'] {
 
 .subscribe-text {
   margin: 0;
-  margin-bottom: 32px;
+  margin-bottom: 42px;
 }
 
 .button-newsletter {
@@ -819,6 +832,7 @@ body[data-color='yellow'] {
   grid-template-columns: 371px 500px;
   gap: 150px;
   padding: 64px;
+  padding-left: 100px;
   box-sizing: border-box;
   background-image: url("../images/delivery-bg.jpg");
   background-repeat: no-repeat;
@@ -846,21 +860,24 @@ body[data-color='yellow'] {
   box-shadow: 0 15px 40px rgba(45, 52, 64, 0.12);
   border-radius: 8px;
   padding: 40px;
+  margin-right: 15px;
+  margin-left: -15px;
 }
 
 .delivery-form-text {
   margin: 0;
-  margin-bottom: 32px;
+  margin-bottom: 34px;
 }
 
 .delivery-input-wrapper {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  row-gap: 20px;
+  row-gap: 17px;
 }
 
 .delivery-form-address {
   grid-column: 1 / -1;
+  margin-bottom: 14px;
 }
 
 .delivery-form-label {
@@ -961,7 +978,7 @@ body[data-color='yellow'] {
   background: transparent;
   outline: none;
   cursor: pointer;
-  margin-left: 10px;
+  margin-left: 4px;
 }
 
 .delivery-info-text {
@@ -1018,6 +1035,7 @@ body[data-color='yellow'] {
 .contacts-wrapper {
   border-radius: 8px;
   padding: 40px;
+  padding-top: 42px;
   background-color: #fcfcfc;
   box-shadow: 0 8px 16px rgba(45, 52, 64, 0.12);
   width: 343px;
@@ -1085,6 +1103,8 @@ body[data-color='yellow'] {
   display: grid;
   grid-template-columns: 1fr 1fr;
   padding: 0 30px;
+  margin-bottom: 6px;
+  transform: translateX(29px);
 }
 
 .footer-about-list {
@@ -1092,8 +1112,16 @@ body[data-color='yellow'] {
   margin: 0 auto;
   padding: 0;
   display: grid;
-  grid-template-columns: 1fr;;
+  grid-template-columns: 1fr;
   text-align: left;
+}
+
+.footer-about-list-right {
+  transform: translateX(-5px);
+}
+
+.footer-about-item {
+  margin-bottom: 6px;
 }
 
 .footer-about-link {
@@ -1106,6 +1134,14 @@ body[data-color='yellow'] {
   background-repeat: no-repeat;
 }
 
+.footer-about-link:hover {
+  opacity: 0.5;
+}
+
+.footer-about-link:focus {
+  outline: 2px solid #2d3440;
+  outline-offset: 2px;
+}
 
 .footer-about-link.is-current {
   font-weight: 700;
@@ -1118,12 +1154,25 @@ body[data-color='yellow'] {
   top: 0;
 }
 
-/* .footer-about-item:nth-of-type(odd) {
-  margin-right: 25px;
-} */
-
 .footer-social-list {
   position: unset;
+  margin-bottom: 32px;
+}
+
+.footer-logo-link {
+  display: inline-block;
+  width: fit-content;
+}
+
+.footer-logo-link:hover,
+.made-by-link:hover {
+  opacity: 0.5;
+}
+
+.footer-logo-link:focus,
+.made-by-link:focus {
+  outline: 2px solid #2d3440;
+  outline-offset: 2px;
 }
 
 .footer-logo {
@@ -1170,7 +1219,6 @@ body[data-color='yellow'] {
   max-width: 400px;
 }
 
-
 .breadcrumbs-item {
   position: relative;
   margin-right: 28px;
@@ -1200,6 +1248,15 @@ body[data-color='yellow'] {
   color: #2d3440;
 }
 
+.breadcrumbs-link:hover {
+  opacity: 0.5;
+}
+
+.breadcrumbs-link:focus {
+  outline: 1px solid #2d3440;
+  outline-offset: 2px;
+}
+
 .inner-header-tittle {
   font-size: 32px;
 }
@@ -1213,13 +1270,17 @@ body[data-color='yellow'] {
   display: flex;
   flex-direction: column;
   margin-right: 24px;
-  margin-bottom: 16px;
+  margin-bottom: 20px;
 }
 
 .select-control {
-  padding: 10px 16px;
-  padding-right: 63px;
-  padding-bottom: 11px;
+  padding: 6px 16px;
+  padding-right: 62px;
+  font-family: "Inter", "Arial", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  color: #2d3440;
   background: rgba(252, 252, 252, 0.3);
   border-radius: 20px;
   border: none;
@@ -1333,11 +1394,12 @@ body[data-color='yellow'] {
   height: 2px;
   background-color: rgba(86, 92, 102, 0.3);
   border-radius: 2px;
+  top: -3px;
 }
 
 .range-bar {
   position: absolute;
-  left: 48px;
+  left: 41px;
   height: 2px;
   background-color: #565C66;
   width: 56px;
@@ -1374,13 +1436,13 @@ body[data-color='yellow'] {
 }
 
 .toggle-min {
-  top: -6px;
-  left: -14px;
+  top: -8px;
+  left: -15px;
 }
 
 .toggle-max {
-  top: -6px;
-  right: -14px;
+  top: -8px;
+  right: -16px;
 }
 
 .catalog-filter-fillers {
@@ -1398,9 +1460,9 @@ body[data-color='yellow'] {
 
 .control-mark {
   position: absolute;
-  left: 0;
-  width: 20px;
-  height: 20px;
+  left: 2px;
+  width: 16px;
+  height: 16px;
   background-color: transparent;
   border-radius: 50%;
   box-shadow: inset 0 0 0 1.3px #2d3440;
@@ -1408,14 +1470,14 @@ body[data-color='yellow'] {
 
 .control-input[type=radio]:checked + .control-mark::before {
   position: absolute;
-  top: 6px;
-  left: 6px;
+  top: 5px;
+  left: 5px;
   content: "";
   background-color: #2d3440;
   box-shadow: inset 0 0 0 1.3px #2d3440;
   border-radius: 50%;
-  width: 8px;
-  height: 8px;
+  width: 6px;
+  height: 6px;
 }
 
 .control-input[type="radio"]:focus + .control-mark::before {
@@ -1495,6 +1557,7 @@ body[data-color='yellow'] {
   font-weight: 700;
   font-size: 14px;
   line-height: 20px;
+  margin-left: -12px;
   text-align: center;
   color: #2d3440;
   min-width: 185px;
@@ -1583,6 +1646,7 @@ body[data-color='yellow'] {
   position: relative;
   min-height: 126px;
   padding: 53px;
+  margin-bottom: 38px;
   box-sizing: border-box;
 }
 
@@ -1593,12 +1657,13 @@ body[data-color='yellow'] {
   color: #2d3440;
   position: absolute;
   margin: 0 auto;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
+  left: 49%;
+  top: 49%;
+  transform: translate(-49%, -49%);
 }
 
 .pagination {
+  transform: translateX(33px);
   position: relative;
   list-style-type: none;
   margin: 0 0 0 auto;
@@ -1774,7 +1839,6 @@ body[data-color='yellow'] {
   position: relative;
 }
 
-
 .header-button {
   border: none;
   box-sizing: border-box;
@@ -1788,6 +1852,11 @@ body[data-color='yellow'] {
 
 .header-button-text {
   margin-left: 6px;
+  font-family: "Inter", "Arial", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  color: #2d3440;
 }
 
 .navigation-link-search {
